# WASM-BOT-TRAP

./: Cargo.toml  DASHBOARD.md  Makefile  QUICK_REFERENCE.md  README.md  TESTING.md  setup.sh  test_all_colored.sh  test_spin_colored.sh
.github/workflows/: ci.yml
.spin/: sqlite_key_value.db
.spin/logs/: bot-trap_stdout.txt
dashboard/: README.md  admin.js  chartjs-plugin-colorschemes.js  dashboard.js  index.html  style.css
src/: admin.rs  ban.rs  ban_tests.rs  cdp.rs  cdp_tests.rs  config.rs  js.rs  lib.rs  metrics.rs  whitelist.rs  whitelist_tests.rs
